# talking-text

./: .env.deploy.example  .gitignore  CLAUDE.cn.md  CLAUDE.md  README.cn.md  README.md  cspell.json  docker-compose-remote.yml  docker-compose.yml  justfile  lefthook.yml
backend/: .dockerignore  .env.example  alembic.ini  config.toml  models.toml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 14cd5701c9fb_add_ingestion_batch_and_level_title.py  37f5422ffdbf_add_accounts_and_learners_tables.py  390d23f60e64_add_learner_content_scope.py  7dcdea84e87e_learner_correction_level.py  856696040434_add_last_active_learner_id_to_account.py  8f2d4b7c1a90_add_item_group_position.py  a50676ada60e_add_learner_persona.py  b46a6684d7e9_create_content_model.py  bc83439525f9_add_collection_tables.py  bc9ff182e2f6_add_learner_calibration_turn.py  c62cb152ead5_group_share_link_adoption_tables.py  c9e4f72a1d38_add_turn_sequence.py  d9ecc84cd217_add_curriculum_system.py  dc5311592f26_add_turn.py  e30514cd95f2_add_session.py  e8b3f51a2c47_add_session_share_link.py
backend/app/: app_config.py  audio_codec.py  config.py  main.py  model_registry.py
backend/app/adapters/: factory.py
backend/app/adapters/llm/: __init__.py  deepseek.py  openai_compatible.py  protocol.py  volc.py
backend/app/adapters/storage/: __init__.py  local.py  protocol.py  qiniu.py  tiered.py
backend/app/adapters/stt/: __init__.py  (+3 more)
backend/app/api/: __init__.py  auth.py  chat_share.py  collection.py  conversation.py  curriculum.py  groups.py  ingest.py  ingestion.py  learner.py  session.py  share.py
backend/app/core/: calibration.py  mastery.py  report.py  sharing.py  text.py
backend/app/storage/: __init__.py  base.py  db.py  enums.py
backend/docker/: Dockerfile  Dockerfile.base
backend/probes/: README.md  __init__.py  __main__.py
backend/scripts/: seed_kids_corner_u4.py
backend/tests/: test_blob_storage.py  test_ingest_extraction.py  test_prompt_assembler.py  test_scope_stretch.py  test_weekly_report.py
(+205 files in other folders)
