[project]
name = "talking-text-backend"
version = "0.0.1"
description = "字有天地 — an English speaking companion for children that chats only within the scope of what they've already learned."
authors = [
    {name = "liupeixin",email = "fengyi.mail@gmail.com"}
]
readme = "../README.md"
requires-python = ">=3.12"
keywords = ["english", "speaking", "children", "education", "llm", "language-learning"]
dependencies = [
    "fastapi (>=0.115,<0.116)",
    "uvicorn[standard] (>=0.32,<0.33)",
    "pydantic (>=2.9,<3.0)",
    "pydantic-settings (>=2.6,<3.0)",
    "sqlalchemy[asyncio] (>=2.0,<3.0)",
    "asyncpg (>=0.30,<0.31)",
    "alembic (>=1.14,<1.15)",
    "redis[hiredis] (>=5.2,<5.3)",
    "httpx (>=0.27,<0.28)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "bcrypt (>=4.2,<5.0)",
    "itsdangerous (>=2.2,<3.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ruff = "^0.7"
pytest = "^8.3"
pytest-asyncio = "^0.24"
mypy = "^1.13"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "UP",
    "SIM",
    "RUF",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
